<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sh.adelessfox</groupId>
    <artifactId>odradek</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <revision>0.1</revision>
    </properties>

    <modules>
        <module>odradek-app</module>
        <module>odradek-core</module>
        <module>odradek-export-dds</module>
        <module>odradek-export-json</module>
        <module>odradek-game-hfw-ui</module>
        <module>odradek-game-hfw</module>
        <module>odradek-opengl-awt</module>
        <module>odradek-opengl</module>
        <module>odradek-rtti-generator</module>
        <module>odradek-rtti</module>
        <module>odradek-ui</module>
        <module>odradek-viewer-model</module>
        <module>odradek-viewer-texture</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <enablePreview>true</enablePreview>
                    <release>25</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Internal dependencies -->
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-game-hfw</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-game-hfw-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-opengl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-opengl-awt</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-rtti</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-rtti-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-ui</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-viewer-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-viewer-texture</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-export-dds</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sh.adelessfox</groupId>
                <artifactId>odradek-export-json</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>tinybcdec</artifactId>
                <version>1.0</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.18</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf-extras</artifactId>
                <version>3.6</version>
            </dependency>
            <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>3.6</version>
            </dependency>
            <dependency>
                <groupId>com.github.weisj</groupId>
                <artifactId>jsvg</artifactId>
                <version>1.7.2</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.13.1</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.github.jbock-java</groupId>
                <artifactId>dapper</artifactId>
                <version>2.41.2</version>
            </dependency>
            <dependency>
                <groupId>com.miglayout</groupId>
                <artifactId>miglayout-swing</artifactId>
                <version>11.4.2</version>
            </dependency>
            <dependency>
                <groupId>com.palantir.javapoet</groupId>
                <artifactId>javapoet</artifactId>
                <version>0.7.0</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>4.7.7</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>3.3.6</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.12.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <version>3.19.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
